Added base for quotes and started layout of game functions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
             <h1>Trivia Game</h1>
             
-            <h3 id="question">Question</h3>
+            <h3 id="quote">quote</h3>
             <h5 class="answer" id="a">First</h5>
             <h5 class="answer" id="b">Second</h5>
             <h5 class="answer" id="c">Third</h5>
