Added selectQuotes functionality and added quotes with their correct answer

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <nav class="navbar navbar-dark bg-dark">
                 <a class="navbar-brand" href="https://magusconjurer.github.io/portfolio.html">Return to Portfolio</a>
             </nav>
-            <h1>Trivia Game</h1>
+            <h1>Guess That Shakespeare Quote</h1>
             
-            <h3 id="quote">quote</h3>
+            <h3 id="quote">To be or not to be.</h3>
             <h5 class="answer" id="a">First</h5>
             <h5 class="answer" id="b">Second</h5>
             <h5 class="answer" id="c">Third</h5>
