The updatePage function now adds the quote, answers, and shows whether selected answer is correct

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <h1>Guess That Shakespeare Quote</h1>
             
             <h3 id="quote">To be or not to be.</h3>
-            <h5 class="answer" id="a">First</h5>
-            <h5 class="answer" id="b">Second</h5>
-            <h5 class="answer" id="c">Third</h5>
-            <h5 class="answer" id="d">Fourth</h5>
+            <h5 class="answer" id="answerOne">First</h5>
+            <h5 class="answer" id="answerTwo">Second</h5>
+            <h5 class="answer" id="answerThree">Third</h5>
+            <h5 class="answer" id="answerFour">Fourth</h5>
 
             <p id="timer"></p>
 
