Added shuffleAnswers and runGame. The runGame function handles updating the questions and then showing the score.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-dark bg-dark">
                 <a class="navbar-brand" href="https://magusconjurer.github.io/portfolio.html">Return to Portfolio</a>
             </nav>
-            <h1>Guess That Shakespeare Quote</h1>
+            <h1>Guess That Shakespeare Play</h1>
             
             <h3 id="quote">To be or not to be.</h3>
             <h5 class="answer" id="answerOne">First</h5>
@@ -26,7 +26,7 @@
             <h5 class="answer" id="answerThree">Third</h5>
             <h5 class="answer" id="answerFour">Fourth</h5>
 
-            <p id="timer"></p>
+            <h3 id="timer"></h3>
 
 
         </div>
