Added additional css to style the page

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <h1>Guess That Shakespeare Play</h1>
             
             <h3 id="quote">To be or not to be.</h3>
-            <h5 class="answer" id="answerOne">First</h5>
-            <h5 class="answer" id="answerTwo">Second</h5>
-            <h5 class="answer" id="answerThree">Third</h5>
-            <h5 class="answer" id="answerFour">Fourth</h5>
-
+            <div id="answers">
+                <h5 class="answer" id="answerOne">First</h5>
+                <h5 class="answer" id="answerTwo">Second</h5>
+                <h5 class="answer" id="answerThree">Third</h5>
+                <h5 class="answer" id="answerFour">Fourth</h5>
+            </div>
             <h3 id="timer"></h3>
 
 
